# safetensors-surgery

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yaml  ci.yml
benchmarks/: README.md  compare.py  download_data.py
cli/: Cargo.toml
cli/src/: main.rs
surgery/: Cargo.toml
surgery/src/: config.rs  io.rs  lib.rs  merge.rs  names.rs
surgery/tests/: integration.rs
