[package]
name = "surgery"
version = "0.1.0"
edition = "2021"

[dependencies]
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
thiserror = "2"
ndarray = { version = "0.16", features = ["blas"] }
half = "2.4"
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

[dev-dependencies]
tempfile = "3"